@@ -1,4 +1,5 @@
 AUX mirrorbrain.conf.dist 283 RMD160 75e1d9b143df9d65b280ae6033d5421c03f64720 SHA1 fe724636efcfc6be74a583d159925ba99670d874 SHA256 f0128c5596b37b92b08b1ddde850f7aa68a29cccee7265bfa4d0beb2beb1c142
 DIST mirrorbrain-2.8.tar.gz 307722 RMD160 83fccfc8bff5a9c07d38407b44681135c3741bb9 SHA1 79470b1c46b6fb861001e7ff9c903f41948eb8e8 SHA256 204ea49097da5502443d7f8a5f34181667486de6c0be227da7e4524cba146125
 EBUILD mirrorbrain-2.8.ebuild 1666 RMD160 7eb8b45f6bb8aa6fcceea51a171cb51b34118f76 SHA1 fbe58c7ae80b7997e82bd8b81e284b59a33bc517 SHA256 ab68815f9710cadab95d9e609067ace4389af7332018a7cd91b480d50ee74ab6
-MISC ChangeLog 379 RMD160 57358a0cec8a72f1f9526597457c36be5a8b629b SHA1 9bdb4826ace9667e10755b2365d39ac02f830083 SHA256 8b1c936222ac6056e54022aeb813954cc9fcc5bb5f265b853ef512b43d4b0771
+EBUILD mirrorbrain-9999.ebuild 1710 RMD160 c8a928b832259763169073bde30d9b3debfc6ee9 SHA1 26936a0e7b859a712fa814d3ab9e8b6d6642b2e9 SHA256 b42ec2f84bf698adaf8a7a82250a71ceb17fdcbe8b624ac60e3ffa3618af79b5
+MISC ChangeLog 518 RMD160 03f882377ec176a397cdae9357e3674275f0758c SHA1 fb1944804ed5fa9aab505d2258e42b2c95bd6418 SHA256 06f47ee80a8b71bc844da0461fcd0e3a0c89f5742657877d5047e9904ed05283
