@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mirrorbrain-9999 (20 May 2009)
+
+  20 May 2009; Lance Albertson <ramereth@gentoo.org>
+  +mirrorbrain-9999.ebuild:
+  New subversion ebuild
+
   20 May 2009; Lance Albertson <ramereth@gentoo.org> mirrorbrain-2.8.ebuild:
   Several fixes
 
